Added Submit button to index

--- a/eCommerce/WebContent/index.html
+++ b/eCommerce/WebContent/index.html
@@ -12,7 +12,10 @@
 		<table>
 			<tr>
 				<td><label>Enter the Product ID:</label></td>
-				<td><input type="text" name="productID"></td>
+				<td><input type="text" name="productID" id="ProductIdentification"></td>
+			</tr>
+			<tr>
+				<td colspan="2"><input type="Submit" value="Get Product" name="SubmitButton" id="getProuctButton"></td>
 			</tr>
 		</table>
 	</form>
