Options added to retrieve products

--- a/eCommerce/WebContent/index.html
+++ b/eCommerce/WebContent/index.html
@@ -11,11 +11,44 @@
 	<form method="get" action="">
 		<table>
 			<tr>
+				<td colspan="2"><lable>Get product by Product ID</lable></td>
+			</tr>
+			<tr>
 				<td><label>Enter the Product ID:</label></td>
 				<td><input type="text" name="productID" id="ProductIdentification"></td>
 			</tr>
 			<tr>
-				<td colspan="2"><input type="Submit" value="Get Product" name="SubmitButton" id="getProuctButton"></td>
+				<td colspan="2"><input type="Submit" value="Get Product" name="getProductbyID" id="getProductbyID"></td>
+			</tr>
+		</table>
+	</form>
+	<br>
+	<form method="get" action="">
+		<table>
+			<tr>
+				<td colspan="2"><lable>Get products by Product Name</lable></td>
+			</tr>
+			<tr>
+				<td><label>Enter the Product Name:</label></td>
+				<td><input type="text" name="productName" id="ProductName"></td>
+			</tr>
+			<tr>
+				<td colspan="2"><input type="Submit" value="Get Product" name="getProductbyName" id="getProductbyName"></td>
+			</tr>
+		</table>
+	</form>
+	<br>
+	<form method="get" action="">
+		<table>
+			<tr>
+				<td colspan="2"><lable>Get products by Product Category</lable></td>
+			</tr>
+			<tr>
+				<td><label>Enter the Product Category:</label></td>
+				<td><input type="text" name="productCategory" id="productCategory"></td>
+			</tr>
+			<tr>
+				<td colspan="2"><input type="Submit" value="Get Product" name="getProductbyCategory" id="getProductbyCategory"></td>
 			</tr>
 		</table>
 	</form>
