--- a/eCommerce/WebContent/index.html
+++ b/eCommerce/WebContent/index.html
@@ -8,13 +8,14 @@
 <h1>Welcome to the Products' Master Page</h1>
 <div>
 </div>
-	<form method="get" action="">
+	<form method="get" action="DisplayProducts">
 		<table>
 			<tr>
-				<td colspan="2"><lable>Get product by Product ID</lable></td>
+				<td colspan="2"><label>Get product by Product ID</label></td>
 			</tr>
 			<tr>
 				<td><label>Enter the Product ID:</label></td>
+				<td><input type="hidden" name="searchVia" value="viaProductID"></td>
 				<td><input type="text" name="productID" id="ProductIdentification"></td>
 			</tr>
 			<tr>
@@ -23,13 +24,14 @@
 		</table>
 	</form>
 	<br>
-	<form method="get" action="">
+	<form method="get" action="DisplayProducts">
 		<table>
 			<tr>
-				<td colspan="2"><lable>Get products by Product Name</lable></td>
+				<td colspan="2"><label>Get products by Product Name</label></td>
 			</tr>
 			<tr>
 				<td><label>Enter the Product Name:</label></td>
+				<td><input type="hidden" name="searchVia" value="viaProductName"></td>
 				<td><input type="text" name="productName" id="ProductName"></td>
 			</tr>
 			<tr>
@@ -38,13 +40,14 @@
 		</table>
 	</form>
 	<br>
-	<form method="get" action="">
+	<form method="get" action="DisplayProducts">
 		<table>
 			<tr>
-				<td colspan="2"><lable>Get products by Product Category</lable></td>
+				<td colspan="2"><label>Get products by Product Category</label></td>
 			</tr>
 			<tr>
 				<td><label>Enter the Product Category:</label></td>
+				<td><input type="hidden" name="searchVia" value="viaProductCat"></td>
 				<td><input type="text" name="productCategory" id="productCategory"></td>
 			</tr>
 			<tr>
