Show All products added

--- a/eCommerce/WebContent/index.html
+++ b/eCommerce/WebContent/index.html
@@ -55,13 +55,14 @@
 			</tr>
 		</table>
 	</form>
+	<br>
 		<form method="get" action="DisplayProducts">
 		<table>
 			<tr>
 				<td><label>Show All products</label></td>
 			</tr>
 			<tr>
-				<td><input type="hidden" name="searchVia" value="viaProductCat"></td>
+				<td><input type="hidden" name="searchVia" value="allProducts"></td>
 			</tr>
 			<tr>
 				<td><input type="Submit" value="Click to Show" name="getAllProducts" id="getAllProducts"></td>
